--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShaDemy – Excellence in Education</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ShaDemy - Excellence in Education</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ Vite will inject the correct script during build -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
